Adjusted hexagon size but do not know how to prevent overflow of svg images

--- a/public_html/assets/less/main.less
+++ b/public_html/assets/less/main.less
@@ -30,3 +30,9 @@
 .traincar-active{
   display: block !important;
 }
+
+.svgHex {
+  white-space: nowrap !important;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
+}
